// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Initial Rendering > should render settings list with visual indicators 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'accessibility settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 On*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'all boolean settings disabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                Off*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              On*  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'default state' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'file filtering settings configured' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'focused on scope selector' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│    Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│    Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│  > Apply To                                                                                      │
│  ● 1. User Settings                                                                              │
│    2. Workspace Settings                                                                         │
│    3. System Settings                                                                            │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'mixed boolean and number settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                Off*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                             Off*  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'tools and security settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 Off  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                              Off  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'various boolean settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Settings                                                                                      │
│                                                                                                  │
│  All │ General │ UI │ Model │ Context │ Tools │ IDE │ Security │ Experimental │ Advanced         │
│                                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Search to filter                                                                             │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│                                                                                                  │
│  General ──────────────────────────────────────────────────────────────────────────────────────  │
│                                                                                                  │
│  ● Vim Mode                                                                                 On*  │
│    Enable Vim keybindings                                                                        │
│                                                                                                  │
│    Approval Mode                                                                        Default  │
│    The default approval mode for tool execution. 'default' prompts for approval, 'au…            │
│                                                                                                  │
│    Auto Update                                                                             Off*  │
│    Disable automatic updates.                                                                    │
│                                                                                                  │
│    Notifications                                                                            Off  │
│    Enable run-event notifications for action-required prompts and session completion. Cu…        │
│    Plan Directory                                                                     undefined  │
│    The directory where planning artifacts are stored. If not specified, defaults t…              │
│                                                                                                  │
│    Plan Model Routing                                                                        On  │
│    Automatically switch between Pro and Flash models based on Plan Mode status. Uses Pro …       │
│                                                                                                  │
│    Max Chat Model Attempts                                                                   10  │
│    Maximum number of attempts for requests to the main chat model. Cannot exceed 10.             │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Apply To                                                                                      │
│  ● User Settings                                                                                 │
│    Workspace Settings                                                                            │
│    System Settings                                                                               │
│                                                                                                  │
│  (Use Enter to select, Ctrl+L to reset, Tab to change focus, Esc to close)                       │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
